Fix #blog-footer layout spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1055,7 +1055,7 @@ button.accordion-button.rotate-icon:focus {
 }
 
 /* Blog footer */
-footer#blog-footer > * {
+footer#blog-footer {
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
